--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
-  "include": ["./src"],
+  "include": ["src"],
   "compilerOptions": {
-    "outDir": "./build",
+    "outDir": "./modules",
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
